Fixed: Bug 39705 - [PC, Linux Mint 17 (64-bit)] - Long subject text overlapps the window borders

--- a/ui/apps/io.ox/mail/style.less
+++ b/ui/apps/io.ox/mail/style.less
@@ -646,8 +646,9 @@
 
         .subject-base();
         background-color: white;
+
         .subject {
-            .ellipsis();
+            word-break: break-word;
         }
 
         .toggle-all {
